--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,8 @@
 \documentclass{include/protokollclass}
 % Main File - Based on protokollclass.cls
-% Comments are mostly in English and some in German (concerning the Praktikum)
+% Comments are mostly in English (and some in German, concerning the Praktikum)
 % ---------------------------------------------------------------------------------------
-% Further files in folder :
+% Further files in folder:
 %  - include/cmds.tex (for macros and additional commands)
 %  - data.tex (für Angaben zum Praktikumsprotokoll)
 %  - include/kitlogo.pdf (for titlepage)
@@ -18,10 +18,10 @@
 
 
 %% --------------------------------------
-%% |    Settings for word separation    |
+%% |    Settings for Word Separation    |
 %% --------------------------------------
 % Help for separation:
-% In german package the following hints are additionally available:
+% In German package the following hints are additionally available:
 % "- = Additional separation
 % "| = Suppress ligation and possible separation (e.g. Schaf"|fell)
 % "~ = Hyphenation without separation (e.g. bergauf und "~ab)
@@ -63,7 +63,7 @@
 %% |    Main Document    |
 %% -----------------------
 \begin{document}
-	% Titelseite und ToC
+	% Titlepage und ToC
 	\FrontMatter
 
 	\input{include/titlepage} % \cleardoublepage
@@ -77,7 +77,7 @@
 
 
 
-	% eigentlicher Inhalt
+	% Contents
 	\MainMatter
 
 	\chapter{Vorbereitungen}% (von \namea)}
@@ -88,24 +88,24 @@
 	\chapter{Auswertung}
 	\input{./chap/chapter2.tex} %\cleardoublepage
 
-	% Anhang für mehr oder weniger interessante Rechnungen etc.
+	% appendix for more or less interesting calculations
 	\Appendix
-	\chapter*{\appendixname} \addcontentsline{toc}{chapter}{\appendixname} % damit der Anhang im ToC ohne Nummer erscheint. \appendixname = Appendix oder Anhang (je nach ausgewählter Sprache)
+	\chapter*{\appendixname} \addcontentsline{toc}{chapter}{\appendixname} % to make the appendix appear in ToC without number. \appendixname = Appendix or Anhang (depending on chosen language)
 	\input{./chap/appendix.tex} %\cleardoublepage
 
 
 
-	% BibTeX
+	% Bibliography
 	\TheBibliography
 
-	%%% BIBTEX
-	% Use if you want citations to appear even if they are not referenced to: \nocite{*} or maybe \nocite{Kon64,And59} for specific entries
+	% BIBTEX
+	% use if you want citations to appear even if they are not referenced to: \nocite{*} or maybe \nocite{Kon64,And59} for specific entries
 	%\nocite{*}
 	\bibliographystyle{babalpha}
 	\bibliography{lit.bib}
 
-	%%% THEBIBLIOGRAPHY
+	% THEBIBLIOGRAPHY
 	%\begin{thebibliography}{000}
-	%	\bibitem{ident}Eintrag ins Literaturverzeichnis
+	%	\bibitem{ident}Entry into Bibliography.
 	%\end{thebibliography}
 \end{document}
