--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,8 @@
 \documentclass{include/protokollclass}
 % Main File - Based on protokollclass.cls
-% Comments are mostly in English and some in German (concerning the Praktikum)
+% Comments are mostly in English (and some in German, concerning the Praktikum)
 % ---------------------------------------------------------------------------------------
-% Further files in folder :
+% Further files in folder:
 %  - include/cmds.tex (for macros and additional commands)
 %  - data.tex (für Angaben zum Praktikumsprotokoll)
 %  - include/kitlogo.pdf (for titlepage)
@@ -18,10 +18,10 @@
 
 
 %% --------------------------------------
-%% |    Settings for word separation    |
+%% |    Settings for Word Separation    |
 %% --------------------------------------
 % Help for separation:
-% In german package the following hints are additionally available:
+% In German package the following hints are additionally available:
 % "- = Additional separation
 % "| = Suppress ligation and possible separation (e.g. Schaf"|fell)
 % "~ = Hyphenation without separation (e.g. bergauf und "~ab)
@@ -63,32 +63,34 @@
 %% |    Main Document    |
 %% -----------------------
 \begin{document}
-	% Titelseite und ToC
-	\FrontMatter
+    % Titlepage und ToC
+    \FrontMatter
 
-	\begin{titlepage}
-		\centering\Huge
+    \begin{titlepage}
+        \centering\Huge
 
-		\vphantom{}
+        \vphantom{}
 
-		\vspace{100px}
+        \vspace{100px}
 
-		README zur Protokollvorlage
+        README zur Protokollvorlage
 
-		\vspace{50px}
+        \vspace{50px}
 
-		\large Anleitung und Erläuterungen zur LaTeX-Vorlage für Praktikumsprotokolle der physikalischen Anfängerpraktika der Fakultät für Physik, KIT.
+        \large Anleitung und Erläuterungen zur LaTeX-Vorlage für
+Praktikumsprotokolle der physikalischen Anfängerpraktika der Fakultät für
+Physik, KIT.
 
-		\vspace{50px}
+        \vspace{50px}
 
-		\large v1.1.0 der Anleitung. Bezieht sich auf v1.1.0 der Vorlage.
-	\end{titlepage}
+        \large v1.1.0 der Anleitung. Bezieht sich auf v1.1.0 der Vorlage.
+    \end{titlepage}
 
-	\tableofcontents
+    \tableofcontents
 
 
 
-	% eigentlicher Inhalt
+	% Contents
 	\MainMatter
 
 	\chapter{Einleitung}
@@ -107,17 +109,17 @@
 
 
 
-	% BibTeX
+	% Bibliography
 	\TheBibliography
 
-	%%% BIBTEX
-	% Use if you want citations to appear even if they are not referenced to: \nocite{*} or maybe \nocite{Kon64,And59} for specific entries
+	% BIBTEX
+	% use if you want citations to appear even if they are not referenced to: \nocite{*} or maybe \nocite{Kon64,And59} for specific entries
 	%\nocite{*}
 	\bibliographystyle{babalpha}
 	\bibliography{lit.bib}
 
-	%%% THEBIBLIOGRAPHY
+	% THEBIBLIOGRAPHY
 	%\begin{thebibliography}{000}
-	%	\bibitem{ident}Eintrag ins Literaturverzeichnis
+	%	\bibitem{ident}Entry into Bibliography.
 	%\end{thebibliography}
 \end{document}
