Further code styling.

--- a/data.tex
+++ b/data.tex
@@ -1,22 +1,27 @@
 %% ---------------------------------------------
 %% |    Informationen über dieses Protokoll    |
 %% ---------------------------------------------
-\newcommand{\praktikum}{P2}		% P1 oder P2
-\newcommand{\semester}{WS14/15}		% z.B. "WS14/15" oder "SS15"
+\newcommand{\praktikum}{P2}                % P1 oder P2
+\newcommand{\semester}{WS14/15}            % z.B. "WS14/15" oder "SS15"
 
-\newcommand{\wochentag}{Do}		% Mo, Di, Mi oder Do
-\newcommand{\gruppennr}{21}		% Zweistellige Gruppennummer
+\newcommand{\wochentag}{Do}                % Mo, Di, Mi oder Do
+\newcommand{\gruppennr}{21}                % Zweistellige Gruppennummer
 
-\newcommand{\nachnamea}{Schal}		% Nachname des ersten Praktikanten
-\newcommand{\vornamea}{Paul}		% Vorname des ersten Praktikanten
-\newcommand{\nachnameb}{Fall}		% Nachname des zweiten Praktikanten
-\newcommand{\vornameb}{Klara}		% Vorname des zweiten Praktikanten
+\newcommand{\nachnamea}{Schal}             % Nachname des ersten Praktikanten
+\newcommand{\vornamea}{Paul}               % Vorname des ersten Praktikanten
+\newcommand{\nachnameb}{Fall}              % Nachname des zweiten Praktikanten
+\newcommand{\vornameb}{Klara}              % Vorname des zweiten Praktikanten
 
-\newcommand{\emailadressen}{latexvorlage@fachschaft.physik.kit.edu} % optionale Angabe von Emailadresse(n) für den Kontakt mit dem Betreuer
+\newcommand{\emailadressen}{latexvorlage@fachschaft.physik.kit.edu}
+% optionale Angabe von Emailadresse(n) für den Kontakt mit dem Betreuer
 
-\newcommand{\versuch}{Absorption radioaktiver Strahlung}	% Name des Versuchs
-\newcommand{\versuchsnr}{80}		% bitte die korrekte Nummer dem Arbeitsplatz am Versuchstag entnehmen
-\newcommand{\fehlerrechnung}{Nein}	% Ob Fehlerrechnung im Versuch durchgeführt wurde oder nicht
+\newcommand{\versuch}{Absorption radioaktiver Strahlung} % Name des Versuchs
+\newcommand{\versuchsnr}{80}               % bitte die korrekte Nummer dem 
+                                           % Arbeitsplatz am Versuchstag 
+                                           % entnehmen
+\newcommand{\fehlerrechnung}{Nein}         % Ob Fehlerrechnung im Versuch 
+                                           % durchgeführt wurde oder nicht
 
-\newcommand{\betreuer}{M. Mustermann}	% Name des zuständigen Betreuers
-\newcommand{\durchgefuehrt}{01.09.14}	% Datum, an dem der Versuch durchgeführt wurde
+\newcommand{\betreuer}{M. Mustermann}      % Name des zuständigen Betreuers
+\newcommand{\durchgefuehrt}{01.09.14}      % Datum, an dem der Versuch 
+                                           % durchgeführt wurde
