--- a/include/titlepage.tex
+++ b/include/titlepage.tex
@@ -12,157 +12,176 @@
 
 
 \begin{titlepage}
-	% background border
-	\begin{tikzpicture}[overlay]
-	\draw[color=gray]  
-			(\xone mm, \yone mm)
-	  -- (\xtwo mm, \yone mm)
-	arc (90:0:\diameter pt) 
-	  -- (\xtwo mm + \diameter pt , \ytwo mm) 
-		-- (\xone mm + \diameter pt , \ytwo mm)
-	arc (270:180:\diameter pt)
-		-- (\xone mm, \yone mm);
-	\end{tikzpicture}
-	
-	% KIT logo
-	\begin{textblock}{10}[0,0](4.5,2.5)
-		\includegraphics[width=.25\textwidth]{include/kitlogo.pdf}
-	\end{textblock}
-	\changefont{phv}{m}{n}	% helvetica
-	\begin{textblock}{10}[0,0](5.5,2.2)
-		\begin{flushright}
-			\Large FAKULTÄT FÜR PHYSIK\\Praktikum Klassische Physik
-		\end{flushright}
-	\end{textblock}
-	
-	\begin{textblock}{10}[0,0](4.2,3.1)
-		\begin{tikzpicture}[overlay]
-		\draw[color=gray]
-				(\xone mm + 5 mm, -12 mm)
-		  -- (\xtwo mm + \diameter pt - 5 mm, -12 mm);
-		\end{tikzpicture}
-	\end{textblock}
-	
-	\Large
-	% Zeile 1
-	\begin{textblock}{12}[0,0](3.58,4.4)
-		\mytextfield{Prak.}{\praktikum}{0.9cm}{17pt}{P1/P2}{2}{Praktikum}
-	\end{textblock}
-	\begin{textblock}{12}[0,0](5.53,4.4)
-		\mytextfield{Semester}{\semester}{2.6cm}{17pt}{z.B. \glqq WS14/15\grqq\ oder \glqq SS15\grqq}{0}{Semester}
-	\end{textblock}
-	\begin{textblock}{12}[0,0](9.53,4.4)
-		\mytextfield{Wochentag}{\wochentag}{1.3cm}{17pt}{Mo/Di/Mi/Do}{2}{Wochentag}
-	\end{textblock}
-	\begin{textblock}{12}[0,0](12.88,4.4)
-		\mytextfield{Gruppennr.}{\gruppennr}{1.06cm}{17pt}{\#\#}{2}{Gruppennummer}
-	\end{textblock}
-	
-	% Zeile 2
-	\begin{textblock}{12}[0,0](3.58,4.95)
-		\mytextfield{Name}{\nachnamea}{6cm}{17pt}{}{0}{Name1}
-	\end{textblock}
-	\begin{textblock}{12}[0,0](9.53,4.95)
-		\mytextfield{Vorname}{\vornamea}{6cm}{17pt}{}{0}{Vorname1}
-	\end{textblock}
-	
-	% Zeile 3
-	\begin{textblock}{12}[0,0](3.58,5.5)
-		\mytextfield{Name}{\nachnameb}{6cm}{17pt}{}{0}{Name2}
-	\end{textblock}
-	\begin{textblock}{12}[0,0](9.53,5.5)
-		\mytextfield{Vorname}{\vornameb}{6cm}{17pt}{}{0}{Vorname2}
-	\end{textblock}
-	
-	% Zeile 4
-	\begin{textblock}{12}[0,0](3.64,6.05)
-		\normalsize\mytextfield{Emailadresse(n)}{\emailadressen}{13.1cm}{10pt}{Optional}{0}{Emailadressen}
-	\end{textblock}
-	
-	% Zeile 5
-	\begin{textblock}{12}[0,0](3.58,7)
-		\mytextfield{Versuch}{\versuch\ (\praktikum-\versuchsnr)}{9.45cm}{14pt}{z.B. \glqq Galvanometer (P1-13)\grqq\ oder \glqq Mikrowellenoptik (P2-15)\grqq}{0}{Versuch}
-	\end{textblock}
-	\begin{textblock}{12}[0,0](12.58,7)
-		\mytextfield{Fehlerrech.}{\fehlerrechnung}{1.46cm}{17pt}{Ja/Nein}{4}{Fehlerrechnung}
-	\end{textblock}
-	
-	% Zeile 6
-	\begin{textblock}{12}[0,0](3.58,7.55)
-		\mytextfield{Betreuer}{\betreuer}{7cm}{17pt}{}{0}{Betreuer}
-	\end{textblock}
-	\begin{textblock}{12}[0,0](10.82,7.55)
-		\mytextfield{Durchgeführt am}{\durchgefuehrt}{2.53cm}{17pt}{TT.MM.JJ}{8}{Durchfuehrung}
-	\end{textblock}
-	
-	% Querstrich
-	\begin{textblock}{20}[0,0](0,7.9)\tiny\centering
-		Wird vom Betreuer ausgefüllt.
-	\end{textblock}
-	\begin{tikzpicture}[overlay]
-	\draw[color=gray]
-			(\xone mm + 5 mm, -95 mm)
-	  -- (\xtwo mm + \diameter pt - 5 mm, -95 mm);
-	\end{tikzpicture}
-	
-	% Zeile 1
-	\begin{textblock}{12}[0,0](3.65,8.57)
-		\myTtextfield{1. Abgabe am}{}{2.5cm}{17pt}{}
-	\end{textblock}
-	
-	% Block 1
-	\begin{tikzpicture}[overlay]
-	\draw[color=gray]  
-			(\xone mm + 10 mm, -107.5 mm)
-	  -- (\xtwo mm + \diameter pt - 10 mm, -107.5 mm)
-	  -- (\xtwo mm + \diameter pt - 10 mm, -107.5 mm - \hoehea mm)
-	  -- (\xone mm + 10 mm, -107.5 mm - \hoehea mm)
-	  -- (\xone mm + 10 mm, -107.5 mm);
-	\end{tikzpicture}
-	\begin{textblock}{20}[0,0](3.8,9.2)
-		\myTtextfield{Rückgabe am}{}{2.5cm}{17pt}{}
-	\end{textblock}
-	\begin{textblock}{20}[0,0](8.7,9.2)
-		\smash{Begründung:}
-	\end{textblock}
-	
-	% Zeile 2
-	\begin{textblock}{12}[0,0](3.65,12.6)
-		\myTtextfield{2. Abgabe am}{}{2.5cm}{17pt}{}
-	\end{textblock}
-	
-	% Block 2
-	\begin{tikzpicture}[overlay]
-	\draw[color=gray]  
-			(\xone mm + 10 mm, -180 mm)
-	  -- (\xtwo mm + \diameter pt - 10 mm, -180 mm)
-	  -- (\xtwo mm + \diameter pt - 10 mm, -180 mm - \hoehea mm)
-	  -- (\xone mm + 10 mm, -180 mm - \hoehea mm)
-	  -- (\xone mm + 10 mm, -180 mm);
-	\end{tikzpicture}
-	\begin{textblock}{12}[0,0](4,13.25)
-		\smash{Ergebnis:~~~~+~~~/~~~0~~~/~~~-}
-	\end{textblock}
-	\begin{textblock}{12}[0,0](9.5,13.25)
-		\smash{Fehlerrechnung:~~~Ja~~~/~~~Nein}
-	\end{textblock}
-	\begin{textblock}{12}[0,0](3.8,13.72)
-		\myTtextfield{Datum}{}{2.5cm}{17pt}{}
-	\end{textblock}
-	\begin{textblock}{12}[0,0](8.3,13.72)
-		\myTtextfield{Handzeichen}{}{5.5cm}{17pt}{}
-	\end{textblock}
-	\begin{textblock}{12}[0,0](4,14.25)\Large
-		\smash{Bemerkungen:}
-	\end{textblock}
-	
-	
-	
-	% lowest text blocks concerning the KIT
-	\begin{textblock}{10}[0,0](4,16.8)
-		\tiny{KIT -- Universität des Landes Baden-Württemberg und nationales Forschungszentrum in der Helmholtz-Gemeinschaft}
-	\end{textblock}
-	\begin{textblock}{10}[0,0](14,16.75)
-		\large{\textbf{www.kit.edu}}
-	\end{textblock}
+    % background border
+    \begin{tikzpicture}[overlay]
+    \draw[color=gray]  
+            (\xone mm, \yone mm)
+      -- (\xtwo mm, \yone mm)
+    arc (90:0:\diameter pt) 
+      -- (\xtwo mm + \diameter pt , \ytwo mm) 
+        -- (\xone mm + \diameter pt , \ytwo mm)
+    arc (270:180:\diameter pt)
+        -- (\xone mm, \yone mm);
+    \end{tikzpicture}
+    
+    % KIT logo
+    \begin{textblock}{10}[0,0](4.5,2.5)
+        \includegraphics[width=.25\textwidth]{include/kitlogo.pdf}
+    \end{textblock}
+    \changefont{phv}{m}{n}    % helvetica
+    \begin{textblock}{10}[0,0](5.5,2.2)
+        \begin{flushright}
+            \Large FAKULTÄT FÜR PHYSIK\\Praktikum Klassische Physik
+        \end{flushright}
+    \end{textblock}
+    
+    \begin{textblock}{10}[0,0](4.2,3.1)
+        \begin{tikzpicture}[overlay]
+        \draw[color=gray]
+            (\xone mm + 5 mm, -12 mm)
+         -- (\xtwo mm + \diameter pt - 5 mm, -12 mm);
+        \end{tikzpicture}
+    \end{textblock}
+    
+    \Large
+    % Zeile 1
+    \begin{textblock}{12}[0,0](3.58,4.4)
+        \mytextfield{Prak.}{\praktikum}{0.9cm}{17pt}
+                    {P1/P2}{2}{Praktikum}
+    \end{textblock}
+    \begin{textblock}{12}[0,0](5.53,4.4)
+        \mytextfield{Semester}{\semester}{2.6cm}{17pt}
+        {z.B. \glqq WS14/15\grqq\ oder \glqq SS15\grqq}{0}{Semester}
+    \end{textblock}
+    \begin{textblock}{12}[0,0](9.53,4.4)
+        \mytextfield{Wochentag}{\wochentag}{1.3cm}{17pt}
+                    {Mo/Di/Mi/Do}{2}{Wochentag}
+    \end{textblock}
+    \begin{textblock}{12}[0,0](12.88,4.4)
+       \mytextfield{Gruppennr.}{\gruppennr}{1.06cm}{17pt}
+                   {\#\#}{2}{Gruppennummer}
+    \end{textblock}
+    
+    % Zeile 2
+    \begin{textblock}{12}[0,0](3.58,4.95)
+        \mytextfield{Name}{\nachnamea}{6cm}{17pt}
+                    {}{0}{Name1}
+    \end{textblock}
+    \begin{textblock}{12}[0,0](9.53,4.95)
+        \mytextfield{Vorname}{\vornamea}{6cm}{17pt}
+                    {}{0}{Vorname1}
+    \end{textblock}
+    
+    % Zeile 3
+    \begin{textblock}{12}[0,0](3.58,5.5)
+        \mytextfield{Name}{\nachnameb}{6cm}{17pt}
+                    {}{0}{Name2}
+    \end{textblock}
+    \begin{textblock}{12}[0,0](9.53,5.5)
+        \mytextfield{Vorname}{\vornameb}{6cm}{17pt}
+                    {}{0}{Vorname2}
+    \end{textblock}
+    
+    % Zeile 4
+    \begin{textblock}{12}[0,0](3.64,6.05)
+       \normalsize\mytextfield{Emailadresse(n)}{\emailadressen}{13.1cm}{10pt}
+                              {Optional}{0}{Emailadressen}
+    \end{textblock}
+    
+    % Zeile 5
+    \begin{textblock}{12}[0,0](3.58,7)
+        \mytextfield{Versuch}{\versuch\ (\praktikum-\versuchsnr)}{9.45cm}{14pt}
+                    {z.B. \glqq Galvanometer (P1-13)\grqq\ oder \glqq %
+                     Mikrowellenoptik (P2-15)\grqq}{0}{Versuch}
+    \end{textblock}
+    \begin{textblock}{12}[0,0](12.58,7)
+       \mytextfield{Fehlerrech.}{\fehlerrechnung}{1.46cm}{17pt}
+                   {Ja/Nein}{4}{Fehlerrechnung}
+    \end{textblock}
+    
+    % Zeile 6
+    \begin{textblock}{12}[0,0](3.58,7.55)
+        \mytextfield{Betreuer}{\betreuer}{7cm}{17pt}{}{0}{Betreuer}
+    \end{textblock}
+    \begin{textblock}{12}[0,0](10.82,7.55)
+        \mytextfield{Durchgeführt am}{\durchgefuehrt}{2.53cm}{17pt}
+                    {TT.MM.JJ}{8}{Durchfuehrung}
+    \end{textblock}
+    
+    % Querstrich
+    \begin{textblock}{20}[0,0](0,7.9)\tiny\centering
+        Wird vom Betreuer ausgefüllt.
+    \end{textblock}
+    \begin{tikzpicture}[overlay]
+    \draw[color=gray]
+        (\xone mm + 5 mm, -95 mm)
+     -- (\xtwo mm + \diameter pt - 5 mm, -95 mm);
+    \end{tikzpicture}
+    
+    % Zeile 1
+    \begin{textblock}{12}[0,0](3.65,8.57)
+        \myTtextfield{1. Abgabe am}{}{2.5cm}{17pt}
+                     {}
+    \end{textblock}
+    
+    % Block 1
+    \begin{tikzpicture}[overlay]
+    \draw[color=gray]  
+        (\xone mm + 10 mm, -107.5 mm)
+     -- (\xtwo mm + \diameter pt - 10 mm, -107.5 mm)
+     -- (\xtwo mm + \diameter pt - 10 mm, -107.5 mm - \hoehea mm)
+     -- (\xone mm + 10 mm, -107.5 mm - \hoehea mm)
+     -- (\xone mm + 10 mm, -107.5 mm);
+    \end{tikzpicture}
+    \begin{textblock}{20}[0,0](3.8,9.2)
+        \myTtextfield{Rückgabe am}{}{2.5cm}{17pt}
+                     {}
+    \end{textblock}
+    \begin{textblock}{20}[0,0](8.7,9.2)
+        \smash{Begründung:}
+    \end{textblock}
+    
+    % Zeile 2
+    \begin{textblock}{12}[0,0](3.65,12.6)
+        \myTtextfield{2. Abgabe am}{}{2.5cm}{17pt}
+                     {}
+    \end{textblock}
+    
+    % Block 2
+    \begin{tikzpicture}[overlay]
+    \draw[color=gray]  
+        (\xone mm + 10 mm, -180 mm)
+     -- (\xtwo mm + \diameter pt - 10 mm, -180 mm)
+     -- (\xtwo mm + \diameter pt - 10 mm, -180 mm - \hoehea mm)
+     -- (\xone mm + 10 mm, -180 mm - \hoehea mm)
+     -- (\xone mm + 10 mm, -180 mm);
+    \end{tikzpicture}
+    \begin{textblock}{12}[0,0](4,13.25)
+        \smash{Ergebnis:~~~~+~~~/~~~0~~~/~~~-}
+    \end{textblock}
+    \begin{textblock}{12}[0,0](9.5,13.25)
+        \smash{Fehlerrechnung:~~~Ja~~~/~~~Nein}
+    \end{textblock}
+    \begin{textblock}{12}[0,0](3.8,13.72)
+        \myTtextfield{Datum}{}{2.5cm}{17pt}
+                     {}
+    \end{textblock}
+    \begin{textblock}{12}[0,0](8.3,13.72)
+        \myTtextfield{Handzeichen}{}{5.5cm}{17pt}
+                     {}
+    \end{textblock}
+    \begin{textblock}{12}[0,0](4,14.25)\Large
+        \smash{Bemerkungen:}
+    \end{textblock}
+    
+    
+    
+    % lowest text blocks concerning the KIT
+    \begin{textblock}{10}[0,0](4,16.8)
+        \tiny{KIT -- Universität des Landes Baden-Württemberg und nationales %
+              Forschungszentrum in der Helmholtz-Gemeinschaft}
+    \end{textblock}
+    \begin{textblock}{10}[0,0](14,16.75)
+        \large{\textbf{www.kit.edu}}
+    \end{textblock}
 \end{titlepage}
