Fixed typo in main.tex.
(cherry picked from commit 589b446eedf03866bb021bb286905b44d1f24ce8)

--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@
 
 
 % um die Titelseite per PDF-reader auszufüllen. Vorgefertigte Daten
-% können unter 'misc/data.tex' modifiziert werden.
+% können in Datei 'data.tex' modifiziert werden.
 %\setboolean{forminput}{true}
 % um die Anmerkungen zu den Textfeldern anzeigen zu lassen
 %\setboolean{showannotations}{true}
