Changed the more common way of numbering pages and chapters to default, rather than chapter wise numbering and resetting of page numbering with each chapter. This is due to the fact that in future lab reports in the Anfängerpraktikum students will not have to figure together three documents (Vorbereitungen and Auswertung).

--- a/include/protokollclass.cls
+++ b/include/protokollclass.cls
@@ -354,10 +354,10 @@
 %% |    Style of appendix and mainmatter    |
 %% ------------------------------------------
 \newboolean{chapWiseNumb}
-\setboolean{chapWiseNumb}{true}
+\setboolean{chapWiseNumb}{false}
 
 \newboolean{chapResetPageNumb}
-\setboolean{chapResetPageNumb}{true}
+\setboolean{chapResetPageNumb}{false}
 
 \newcommand{\FrontMatter}
 {
