--- a/main.tex
+++ b/main.tex
@@ -80,10 +80,10 @@
 %\setboolean{forminput}{true}
 % um die Anmerkungen zu den Textfeldern anzeigen zu lassen
 %\setboolean{showannotations}{true}
-% um das Erneuern der Seitenzahl in jedem Kapitel zu unterbinden
-%\setboolean{chapResetPageNumb}{false}
-% um das Einbinden der Kapitelnummer in der Seitenzahl zu unterbinden
-%\setboolean{chapWiseNumb}{false}
+% Erneuern der Seitenzahl in jedem Kapitel
+%\setboolean{chapResetPageNumb}{true}
+% Einbinden der Kapitelnummer in der Seitenzahl
+%\setboolean{chapWiseNumb}{true}
 % english or ngerman (new german für neue deutsche Rechtschreibung statt german)
 \SelectLanguage{ngerman}
 
