Updated Readme file.

--- a/main.tex
+++ b/main.tex
@@ -135,8 +135,8 @@
     \input{./chap/chapter4.tex}
 
     % appendix for more or less interesting calculations
-    \Appendix
-    \chapter*{\appendixname} \addcontentsline{toc}{chapter}{\appendixname}
+    %\Appendix
+    %\chapter*{\appendixname} \addcontentsline{toc}{chapter}{\appendixname}
     % to make the appendix appear in ToC without number. \appendixname = 
     % Appendix or Anhang (depending on chosen language)
     %\input{./chap/appendix.tex} %\cleardoublepage
