Updated emptychapter cmd and added pseudochapter cmd, which does a slightly different thing.
(cherry picked from commit de42d423b2eb1e2a3a09a3636ba777a08ae098bc)

--- a/include/protokollclass.cls
+++ b/include/protokollclass.cls
@@ -444,10 +444,40 @@
     }{}
 }
 
-\newcommand{\emptychapter}[2]
+\newcommand{\emptychapter}[2][]
 {
-    \clearpage\addtocounter{chapter}{1}\addtocontents{toc}{\protect\contentsline
-                           {chapter}{\protect\numberline {\thechapter}#1}{#2}{}}
+    \addtocounter{chapter}{1}
+    \addtocontents{toc}{\protect\contentsline
+        {chapter}{\protect\numberline {\thechapter}#2}{#1}{}}
+}
+
+\newcounter{tmppage}
+
+\newcommand{\pseudochapter}[2][0]
+{
+    \clearpage
+    \ifthenelse{\boolean{chapResetPageNumb}}
+    {
+        \setcounter{tmppage}{1}
+    }
+    {
+        \setcounter{tmppage}{\arabic{page}}
+    }
+    \addtocounter{chapter}{1}
+    
+    \ifthenelse{\boolean{chapWiseNumb}}
+    {
+        \addtocontents{toc}{\protect\contentsline
+            {chapter}{\protect\numberline {\thechapter}#2}
+            {\thechapter-\thetmppage}{}}
+        \clearpage
+    }
+    {
+        \addtocontents{toc}{\protect\contentsline
+            {chapter}{\protect\numberline {\thechapter}#2}{\thetmppage}{}}
+        \clearpage
+    }
+    \addtocounter{page}{#1}
 }
 
 
