--- a/main.tex
+++ b/main.tex
@@ -115,8 +115,8 @@
     \chapter{Vorbereitungen}
     \input{./chap/chapter1.tex} %\cleardoublepage
 
-    \emptychapter{Messprotokoll}{2}     % usage: \emptychapter{name of the 
-                                        %        chapter}{page displayed in toc}
+    \pseudochapter[3]{Messprotokoll}    % usage: \pseudochapter[number of pages 
+                                        %        added]{name of the chapter}
 
     \chapter{Auswertung}
     \input{./chap/chapter2.tex} %\cleardoublepage
