--- a/include/protokollclass.cls
+++ b/include/protokollclass.cls
@@ -145,6 +145,10 @@
             citebordercolor=kitcolor]{hyperref}
 
 
+\expandafter\def\csname ver@subfig.sty\endcsname{}  % stop package svg from
+                                                    % loading package subfig
+                                                    % http://tex.stackexchange.com/questions/213273/undefined-control-sequence-at-begindocument
+\usepackage{svg}                                    % include svg graphics
 
 
 
