Added chap/ and fig/ directories to graphicspath.

--- a/include/protokollclass.cls
+++ b/include/protokollclass.cls
@@ -145,10 +145,17 @@
             citebordercolor=kitcolor]{hyperref}
 
 
-\expandafter\def\csname ver@subfig.sty\endcsname{}  % stop package svg from
-                                                    % loading package subfig
-                                                    % http://tex.stackexchange.com/questions/213273/undefined-control-sequence-at-begindocument
-\usepackage{svg}                                    % include svg graphics
+\expandafter\def\csname ver@subfig.sty\endcsname{}
+                                                % stop package svg from loading 
+                                                % package subfig
+                                                % http://tex.stackexchange.com/\
+                                                % questions/213273/undefined-  \
+                                                % control-sequence-            \
+                                                % at-begindocument
+\usepackage{svg}                                % include svg graphics
+
+
+
 
 
 
