Substitute subcaption -> subfig
Newer LaTeX systems throw incompatibility errors between subcaption
and subfig (which seems to be included implicitly).

--- a/include/protokollclass.cls
+++ b/include/protokollclass.cls
@@ -102,7 +102,7 @@
                 labelfont=bf,
                 margin=2em]{caption}            % create graphics/
                                                 % tabular captions
-\usepackage{subcaption}                         % create subcaptions
+\usepackage{subfig}                         % create subcaptions
                                                 % for subpictures
 
 \usepackage[absolute,overlay]{textpos}          % used for titlepage
